# ai-agent-mesh

./: .gitignore  README.md  output.txt  pyproject.toml
.github/workflows/: ci.yml
config/: andrew.yaml  device_config.example.yaml
config/templates/: README.md  tier0_mobile.yaml  tier1_igpu_laptop.yaml  tier2_dgpu_desktop.yaml  tier2_dgpu_laptop.yaml
infra/: docker-compose.yml  litellm_config.yaml  otel-collector-config.yaml  prometheus.yml  redis.conf
infra/grafana/dashboards/: aimesh.json
infra/grafana/provisioning/dashboards/: dashboard.yml
infra/grafana/provisioning/datasources/: prometheus.yml
scripts/: bootstrap.ps1  bootstrap.sh  detect_hardware.py  run_worker.py  smoke_test_classifier.py  smoke_test_gateway.py  smoke_test_health.py  smoke_test_redis.py  smoke_test_registry.py  smoke_test_results.py  smoke_test_router.py  smoke_test_worker.py
scripts/hooks/: commit-msg
src/: telemetry.py
src/control_plane/classifier/: __init__.py  classifier.py  prompt.py
src/control_plane/gateway/: __init__.py  client.py
src/control_plane/queue/: __init__.py  collector.py  router.py  task.py
src/control_plane/redis/: __init__.py  client.py  pubsub.py  streams.py
src/control_plane/registry/: device.py  registry.py
src/worker/: config.py  contract.py  gateway_worker.py  health.py
