[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aimesh"
version = "0.1.0"
description = "Distributed LLM agent mesh"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "openai>=1.0",      # OpenAI-compatible client for the LiteLLM gateway (AIMESH-11)
    "pyyaml>=6.0",      # config file parsing
    "psutil>=5.9",      # live CPU / memory metrics for heartbeat (AIMESH-17)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
